--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ settings.gradle
 
 # Keep module directories and their contents, but exclude build folders
 !module*/
+!settings.gradle
+!module*/build.gradle
